# polyloop-bo

./: CITATION.cff  LICENSE  README.md  index.html  pyproject.toml
data/: electrospinning_experiments.csv  literature_snippets.jsonl
data/fiber_images/: index.csv
docs/: index.html
docs/assets/: app.js  experiments.json  model.json
examples/: quickstart.py
scripts/: generate_data.py  serve_web.py
src/polyloop/: __init__.py  agent.py  bo.py  cli.py  dataset.py  features.py  llm_retrieval.py  models.py  simulator.py  utils.py  vision.py
src/polyloop_bo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
