[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyloop-bo"
version = "0.1.0"
description = "Closed-loop electrospinning optimisation (Bayesian optimisation + fibre vision + text-informed priors)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Burhan Beycan"}
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "typer>=0.9",
  "rich>=13.0",
  "opencv-python>=4.8",
  "scikit-image>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
]

[project.scripts]
polyloop = "polyloop.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
